--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "basiclightbox": "^5.0.4",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-icons": "^4.10.1",
     "react-loader-spinner": "^5.3.4",
     "react-scripts": "^5.0.1",
     "web-vitals": "^2.1.3"
