--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.4.0",
     "basiclightbox": "^5.0.4",
+    "prop-types": "^15.8.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-icons": "^4.10.1",
     "react-loader-spinner": "^5.3.4",
     "react-scripts": "^5.0.1",
+    "react-scroll": "^1.8.9",
     "web-vitals": "^2.1.3"
   },
   "scripts": {
